styles/main.css
.thumbnail {
    position: relative;
}

.caption {
    position: absolute;
    top: 45%;
    left: 0;
    width: 100%;
}

.container-main {
  width: 954px;
}

.row-eq-height {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.col-no-padding, .panel-body-no-padding {
  padding: 0px;
}

.panel-group-no-margin, .panel-no-margin {
  margin: 0px !important;
}

.panel-no-border-radius {
  border-radius: 0px !important;
  border:none;
}

.row-border{
  border: 1px solid #5bc0de;
}

.col-right-border {
  border: none;
}

.col-left-border {
  border-right: 1px solid #5bc0de;
}

#detail .title {
  margin-top: 0px;
  color: #428bca;
}

#detail h4 {
  color: #428bca;
}

.fieldset-border {
  border: 2px groove #ddd !important;
  padding: 0 1.4em 0 1.4em !important;
  margin: 0 0 1.5em 0 !important;
  -webkit-box-shadow:  0px 0px 0px 0px #000;
          box-shadow:  0px 0px 0px 0px #000;
}

.legend-border {
  font-size: 1.2em !important;
  font-weight: bold !important;
  text-align: left !important;
  width:auto;
  padding:0 10px;
  border-bottom:none;
  margin: 0;
}

